I fixed an error of ubication between layers using z-index

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,4 +1,5 @@
 .filters {
+    z-index: 1;
     background-color: white;
     height: 70px;
     width: 100%;
